--- a/kniffel.html
+++ b/kniffel.html
@@ -57,7 +57,7 @@
         const firebaseConfig = {
             apiKey: "AIzaSyAsznvjalpgFbi1LN1LLjJvlttZRC3NOzI",
             authDomain: "kniffelig-7af1e.firebaseapp.com",
-            databaseURL: "https://kniffelig-7af1e.firebaseapp.com",
+            databaseURL: "https://kniffelig-7af1e-default-rtdb.europe-west1.firebasedatabase.app",
             projectId: "kniffelig-7af1e",
             appId: "1:1038332936720:web:9e29bb6297564fb10fc095"
         };
